@@ -49,6 +49,7 @@
   [#22834] ATmega164P/324P/644P/1284P lack BODS/BODSE bits in MCUCR
   [#22870] Error in wdt.h and ATmega164P
   [#22877] Fuse information wrong for xmega devices.
+  [#22878] eeprom_*_word/dword/block cause hang in ATmega256x
   [#23004] Watchdog enable docu only generated for Xmega series
   [#23032] Define PORTxn, PINxn, DDxn bit names in iomxx4.h.
   [#23166] atmega328p does not have SPMEN
